erDiagram

    USUARIO ||--o| PACIENTE : "especializa"
    USUARIO ||--o| ADMINISTRADOR : "especializa"

    ENDERECO ||--o{ PACIENTE : "residencia_de"
    ENDERECO ||--o{ APOIO : "localiza"

    ADMINISTRADOR ||--o{ ADMINISTRADOR_PERFIL : "possui"
    PERFIL_ADMINISTRATIVO ||--o{ ADMINISTRADOR_PERFIL : "define"

    PACIENTE ||--o{ REGISTRO_DIARIO : "cadastra"
    REGISTRO_DIARIO ||--o{ REGISTRO_SINTOMA : "possui"

    PACIENTE ||--o{ CONSULTA : "agenda"

    APOIO ||--o{ HORARIO_FUNCIONAMENTO : "funciona_em"
    APOIO ||--o{ APOIO_IMAGEM : "possui"

    ADMINISTRADOR ||--o{ ARTIGO : "publica"

    ARTIGO ||--o{ ARTIGO_CATEGORIA : "classificado"
    CATEGORIA ||--o{ ARTIGO_CATEGORIA : "agrupa"

    ARTIGO ||--o{ ARTIGO_TAG : "possui"
    TAG ||--o{ ARTIGO_TAG : "identifica"


    USUARIO {
        uuid id PK
        string nome
        string email UK
        string login UK
        string senha_hash
        string telefone
        date data_nascimento
        string status "ATIVO, INATIVO, BLOQUEADO"
        timestamp data_criacao
        timestamp data_atualizacao
        timestamp ultimo_acesso
    }


    PACIENTE {
        uuid usuario_id PK, FK
        uuid endereco_id FK
    }


    ADMINISTRADOR {
        uuid usuario_id PK, FK
    }


    PERFIL_ADMINISTRATIVO {
        uuid id PK
        string nome UK "TOTAL, MODERADOR_CONTEUDO, GERENTE_APOIOS"
        string descricao
    }


    ADMINISTRADOR_PERFIL {
        uuid administrador_id PK, FK
        uuid perfil_id PK, FK
    }


    ENDERECO {
        uuid id PK
        string cep
        string logradouro
        string numero
        string complemento
        string bairro
        string cidade
        string estado
        geometry localizacao_postgis "Ponto geografico"
    }


    REGISTRO_DIARIO {
        uuid id PK
        uuid paciente_id FK
        timestamp data_hora
        string humor
        string nota_voz_url
    }


    REGISTRO_SINTOMA {
        uuid id PK
        uuid registro_diario_id FK
        string sintoma_tipo
        integer intensidade "Escala discreta definida pela regra de negocio"
    }


    CONSULTA {
        uuid id PK
        uuid paciente_id FK
        string medico_nome
        timestamp data_hora
        string status_consulta
        string observacao
        timestamp data_criacao
        timestamp data_atualizacao
    }


    APOIO {
        uuid id PK
        uuid endereco_id FK
        string nome
        string tipo_apoio "ONG, CLINICA, TRANSPORTE, CASA_APOIO"
        string telefone
        text descricao
        string status_administrativo
        timestamp data_criacao
        timestamp data_atualizacao
    }


    HORARIO_FUNCIONAMENTO {
        uuid id PK
        uuid apoio_id FK
        integer dia_semana "0-6"
        time horario_inicio
        time horario_fim
    }


    APOIO_IMAGEM {
        uuid id PK
        uuid apoio_id FK
        string imagem_url
        integer ordem
    }


    ARTIGO {
        uuid id PK
        uuid autor_id FK
        string titulo
        text conteudo
        integer tempo_leitura_minutos
        string imagem_url
        string status "RASCUNHO, PUBLICADO, DESATIVADO"
        timestamp data_criacao
        timestamp data_atualizacao
        timestamp data_publicacao
    }


    CATEGORIA {
        uuid id PK
        string nome UK
    }


    ARTIGO_CATEGORIA {
        uuid artigo_id PK, FK
        uuid categoria_id PK, FK
    }


    TAG {
        uuid id PK
        string nome UK
    }


    ARTIGO_TAG {
        uuid artigo_id PK, FK
        uuid tag_id PK, FK
    }